<resources>
    <string name="app_name">Mobile Blogging</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_email">Email</string>
    <string name="name">Name</string>
    <string name="sign_up_confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_email">Email</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="navigation_drawer_open">Navigation Drawer Open\n</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
</resources>